add favicon add loader

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -158,4 +158,4 @@
     copyToClipboard("email-address", "Email");
   }
 </script>
-<script src="./js/loader.js" defer></script>
+<script src="js/loader.js" defer></script>
