--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -301,9 +301,9 @@
       justify-content: center;
       width: fit-content;
 
-      .btn__icon-arrow {
-        background: none;
-      }
+      //.btn__icon-arrow {
+      //  background: none;
+      //}
     }
 
     &__footer {
