--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -161,7 +161,7 @@
 <script defer>
   document.addEventListener("DOMContentLoaded", () => {
     const loader = document.getElementById("preloader");
-    const content = document.getElementById("content");
+    // const content = document.getElementById("content");
 
     const pageKey = `hasVisited_${window.location.pathname}`;
 
@@ -170,12 +170,12 @@
     if (isFirstVisitToPage) {
       setTimeout(() => {
         loader.style.display = "none";
-        content.style.display = "block";
+        // content.style.display = "block";
         localStorage.setItem(pageKey, "true");
       }, 2000);
     } else {
       loader.style.display = "none";
-      content.style.display = "block";
+      // content.style.display = "block";
     }
   });
 </script>
