--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -3,7 +3,9 @@
   --second-family: "Unbounded";
 
   --main-purple: #6d45ff;
+  --blue: #a086ff;
   --main-green: #82da71;
+  --hover-green: #52f433;
   --white: #fff;
   --dark-black: #232323;
   --light-grey: #f0f0f0;
