fix footer update buttons

--- a/src/components/cta.html
+++ b/src/components/cta.html
@@ -5,16 +5,12 @@
       <p class="cta__description p-1">Your Vision, Our Expertise</p>
       <div class="section__action cta__action">
         <a href="#" class="btn btn_primary-green">
-          <span class="btn__icon btn__icon-calendar">
-            <span class="icon-calendar"></span>
-          </span>
+          <span class="btn__icon icon-calendar"></span>
           <span class="btn__text">Schedule a Meeting</span>
         </a>
         <button class="btn btn_secondary cta__btn">
           <span class="btn__text">Request Consultation</span>
-          <span class="btn__icon btn__icon-arrow">
-            <span class="icon icon-arrow-right"></span>
-          </span>
+          <span class="btn__icon icon-arrow-right"> </span>
         </button>
       </div>
     </div>
