--- a/src/components/header.html
+++ b/src/components/header.html
@@ -151,7 +151,7 @@
         </ul>
         <a href="./contact-us.html" class="nav__btn btn btn_secondary">
           <span class="btn__text">Contact Us</span>
-          <span class="btn__icon btn__icon-arrow"><span class="icon-arrow-right"></span></span>
+          <span class="btn__icon icon-arrow-right"></span>
         </a>
       </nav>
       <div class="header__toggle-btn" id="menuBtn">
