--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -94,15 +94,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 20px;
-    height: 20px;
+    //width: 20px;
+    //height: 20px;
     font-size: 20px;
-    line-height: 20px;
+    //line-height: 20px;
   }
 
   &__icon-arrow {
-    width: 20px;
-    height: 20px;
+    //width: 20px;
+    //height: 20px;
     color: var(--white);
   }
 }
