--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -33,10 +33,12 @@
   }
 
   &__content {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
+    z-index: 2;
 
     @include tablet {
       flex-wrap: wrap;
