--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 @import "reset";
 @import "./../assets/fonts/icons/icons";
 @import "fonts";
-@import "vars";
+//@import "vars";
 //@import "buttons";
 @import "global";
 @import "components/header";
