--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "normalize.css";
 @import "reset";
 @import "./../assets/fonts/icons/icons";
+@import "node_modules/intl-tel-input/build/css/intlTelInput";
 @import "fonts";
 //@import "vars";
 //@import "buttons";
