--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -1,4 +1,10 @@
 @import "../form";
+:root {
+  --iti-path-flags-1x: url("../../assets/img/flags.webp");
+  --iti-path-flags-2x: url("../../assets/img/flags@2x.webp");
+  --iti-path-globe-1x: url("../../assets/img/globe.webp");
+  --iti-path-globe-2x: url("../../assets/img/globe@2x.webp");
+}
 
 .popup {
   display: none;
