--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -9,6 +9,12 @@
   position: relative;
 }
 
+.input-field-box {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
 .input-field label {
   color: var(--grey);
 }
@@ -191,7 +197,13 @@
     align-items: center;
     color: var(--dark-black);
     gap: 8px;
-    white-space: nowrap;
+
+    span {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      width: 150px;
+      overflow: hidden;
+    }
   }
 }
 
@@ -218,4 +230,23 @@
     font-size: 24px;
     line-height: 24px;
   }
+}
+
+.iti {
+  width: 100%;
+}
+
+.iti--allow-dropdown .iti__flag-container,
+.iti--separate-dial-code .iti__flag-container {
+  left: 10px;
+}
+
+.form__error {
+  position: absolute;
+  top: 40px;
+  color: red;
+}
+
+.form__empty-error {
+  color: red;
 }
