--- a/src/components/header.html
+++ b/src/components/header.html
@@ -149,7 +149,7 @@
             <a class="p-1 nav__link {=$highlight-about}" href="./about.html">About Us</a>
           </li>
         </ul>
-        <a href="./contact-us.html" class="nav__btn btn btn_secondary-black">
+        <a href="./contact-us.html" class="nav__btn btn btn_secondary">
           <span class="btn__text">Contact Us</span>
           <span class="btn__icon icon-arrow-right"></span>
         </a>
