--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -185,7 +185,7 @@
 
         .btn {
           &__icon {
-            color: var(--dark-black);
+            color: currentColor;
           }
         }
       }
