--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -64,6 +64,7 @@
     &:hover {
       border: 1px solid var(--main-purple);
       background-color: var(--main-purple);
+      color: var(--white) !important;
     }
 
     &:disabled {
@@ -94,15 +95,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    //width: 20px;
-    //height: 20px;
     font-size: 20px;
-    //line-height: 20px;
+    line-height: 1;
   }
 
   &__icon-arrow {
-    //width: 20px;
-    //height: 20px;
-    color: var(--white);
+    color: currentColor;
   }
 }
