--- a/src/components/cta.html
+++ b/src/components/cta.html
@@ -1,4 +1,4 @@
-<section class="cta">
+<section class="cta section">
   <div class="container">
     <div class="cta__content">
       <h2 class="cta__title">Ready to Dive into <span class="text-color">Creativity?</span></h2>
