--- a/src/components/request_popup.html
+++ b/src/components/request_popup.html
@@ -37,22 +37,22 @@
 
       <ul class="social__list">
         <li class="social__item">
-          <a href="https://dribble.com" class="social__link">
+          <a href="https://dribble.com" class="social__link" target="_blank">
             <span class="social__icon icon-dribbble"></span>
           </a>
         </li>
         <li class="social__item">
-          <a href="https://behance.com" class="social__link">
+          <a href="https://behance.com" class="social__link" target="_blank">
             <span class="social__icon icon-behance"></span>
           </a>
         </li>
         <li class="social__item">
-          <a href="https://facebook.com" class="social__link">
+          <a href="https://facebook.com" class="social__link" target="_blank">
             <span class="social__icon icon-facebook"></span>
           </a>
         </li>
         <li class="social__item">
-          <a href="https://linkedin.com" class="social__link">
+          <a href="https://linkedin.com" class="social__link" target="_blank">
             <span class="social__icon icon-linkedin"></span>
           </a>
         </li>
@@ -110,8 +110,8 @@
         <div class="input-field">
           <label for="budget">Project budget:</label>
           <div class="budget-container" id="budget">
-            <div class="budget-option p-2" data-value="not-sure">Not Sure</div>
-            <div class="budget-option p-2 selected" data-value="<5k">&lt;$5K</div>
+            <div class="budget-option p-2 selected" data-value="not-sure">Not Sure</div>
+            <div class="budget-option p-2" data-value="<5k">&lt;$5K</div>
             <div class="budget-option p-2" data-value="5k-15k">$5K-$15K</div>
             <div class="budget-option p-2" data-value="15k-25k">$15K-$25</div>
             <div class="budget-option p-2" data-value=">30k">&gt;$30K</div>
