--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -107,28 +107,29 @@
   }
 }
 
-.section-bg {
-  position: relative;
-  background: linear-gradient(141deg, #313131 28.92%, #201e1e 76.39%, #000 100%);
-
-  &::before {
-    position: absolute;
-    content: "";
-    left: 86px;
-    top: 15%;
-    width: 100%;
-    height: 50%;
-    background: url("../../assets/img/lines.svg") no-repeat 50% 50% / cover;
-    transform: scale(1, -1);
-    z-index: 1;
-  }
-}
+//.section-bg {
+//  position: relative;
+//  background: linear-gradient(141deg, #313131 28.92%, #201e1e 76.39%, #000 100%);
+//
+//  &::before {
+//    position: absolute;
+//    content: "";
+//    left: 86px;
+//    top: 15%;
+//    width: 100%;
+//    height: 50%;
+//    background: url("../../assets/img/lines.svg") no-repeat 50% 50% / cover;
+//    transform: scale(1, -1);
+//    z-index: 1;
+//  }
+//}
 
 .services {
   position: relative;
   padding: 60px 0;
   color: var(--white);
   z-index: 2;
+  background: url("../../assets/img/services/bg/bg.jpg") no-repeat 50% 50% / cover;
 
   @include desktop {
     padding: 120px 0;
@@ -411,8 +412,8 @@
   position: relative;
   color: var(--white);
   z-index: 2;
-
   padding: 60px 0;
+  background: url("../../assets/img/portfolio/bg.jpg") no-repeat 50% 50% / cover;
 
   @include tablet {
     padding: 60px 0 90px;
