--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -25,6 +25,17 @@
   padding: 13px 16px;
   width: 100%;
   background-color: var(--white);
+  transition: border-color var(--animation);
+
+  &:hover,
+  &:focus {
+    border: 1px solid var(--main-purple);
+    outline: none;
+
+    & + .icon {
+      color: var(--main-purple);
+    }
+  }
 }
 
 .input-field input {
@@ -39,6 +50,7 @@
   font-size: 24px;
   line-height: 24px;
   color: var(--dark-black);
+  transition: color var(--animation);
 }
 
 .input-group {
@@ -269,4 +281,9 @@
 
 .iti__selected-country-primary:hover {
   background-color: transparent !important;
+}
+
+.input-field input.field-error,
+.input-field textarea.field-error {
+  border: 1px solid #ee3c3c;
 }
