--- a/src/components/popup-mini.html
+++ b/src/components/popup-mini.html
@@ -1,4 +1,4 @@
-<div class="popup popup-mini hidden" id="popup-mini">
+<div class="popup-mini hide" id="popup-mini">
   <div class="popup-mini__content">
     <div class="popup-mini__header">
       <button id="closePopup" class="popup-mini__close-btn popup__close">
