--- a/src/styles/components/popup-mini.scss
+++ b/src/styles/components/popup-mini.scss
@@ -1,4 +1,19 @@
 .popup-mini {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(29, 29, 29, 0.9);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: 0.4s cubic-bezier(0.61, 1, 0.88, 1);
+
+  &.is-open {
+    display: flex;
+  }
+
   &__close-btn {
     position: absolute;
     top: 15px;
