--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -88,12 +88,14 @@
 
         .icon-copy {
           color: var(--main-green);
+          font-size: 20px;
         }
 
         .icon-sms,
         .icon-location,
         .icon-call {
           color: var(--grey);
+          font-size: 20px;
         }
       }
 
