--- a/src/styles/pages/contact-us.scss
+++ b/src/styles/pages/contact-us.scss
@@ -125,6 +125,27 @@
   }
 }
 
+.counter {
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  font-size: 12px;
+  color: var(--medium-grey);
+  z-index: 6;
+}
+
+.form__error.comment-error {
+  top: auto;
+  bottom: 7px;
+  right: 1px;
+  left: 1px;
+  background-color: white;
+  line-height: 1;
+  z-index: 5;
+  text-align: right;
+  padding-right: 50px;
+}
+
 .map {
   img {
     width: 100%;
