--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -54,11 +54,11 @@
         <li class="footer__contacts-item">
           <span class="icon-sms icon"></span>
           <a id="email-address" class="p-2" href="mailto:hello@mfisher.com">hello@mfisher.com</a>
-          <span class="icon-copy" id="email-copy" onclick="copyEmail()"></span>
+          <span class="icon-copy icon_primary-white" id="email-copy" onclick="copyEmail()"></span>
         </li>
         <li class="footer__contacts-item">
           <span class="icon icon-call"></span><a id="phone-number" class="p-2" href="tel:+123455677">+ 1 234 55 677</a>
-          <span id="phone-copy" class="icon-copy" onclick="copyPhoneNumber()"></span>
+          <span id="phone-copy" class="icon-copy icon_primary-white" onclick="copyPhoneNumber()"></span>
         </li>
         <li class="footer__contacts-item">
           <span class="icon icon-location"></span>
