--- a/src/components/header.html
+++ b/src/components/header.html
@@ -168,7 +168,7 @@
 
   const header = document.querySelector(".header");
   if (header) {
-    if (url.includes("/contact-us.html") || url.includes("/portfolio.html")) {
+    if (url.includes("/contact-us.html")) {
       header.classList.add("header-white");
     }
   }
