--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -28,16 +28,27 @@
   }
 
   &__content {
-    display: flex;
-    flex-direction: row-reverse;
     background-color: var(--white);
     position: relative;
     box-shadow: 0 14px 54px 0 rgba(0, 0, 0, 0.16);
-    max-height: 100%;
+    max-height: 792px;
+    height: 100%;
     overflow-y: auto;
 
     @include tablet {
     }
+
+    @include desktop {
+      max-width: 1087px;
+      width: 100%;
+      max-height: none;
+      height: fit-content;
+    }
+  }
+
+  &__wrapper {
+    display: flex;
+    flex-direction: row-reverse;
   }
 
   &__close-btn {
@@ -73,6 +84,7 @@
     color: var(--white);
     max-width: 480px;
     width: 100%;
+    //height: 100%;
 
     @include desktop {
       display: flex;
