--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -154,7 +154,6 @@
   justify-content: flex-start;
   align-items: center;
   gap: 5px;
-  margin-bottom: 24px;
 
   .icon-info {
     font-size: 20px;
@@ -286,4 +285,41 @@
 .input-field input.field-error,
 .input-field textarea.field-error {
   border: 1px solid #ee3c3c;
+}
+
+.check-box {
+  display: flex;
+  justify-content: flex-start;
+  gap: 5px;
+  align-items: center;
+  margin-bottom: 10px;
+
+  .icon-info {
+    cursor: pointer;
+  }
+}
+
+.counter {
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  font-size: 12px;
+  color: var(--medium-grey);
+  z-index: 2;
+}
+
+.form__error.comment-error {
+  top: auto;
+  bottom: 7px;
+  right: 1px;
+  left: 1px;
+  background-color: white;
+  line-height: 1;
+  z-index: 1;
+  text-align: right;
+  padding-right: 50px;
+}
+
+.iti--inline-dropdown .iti__dropdown-content {
+  z-index: 10 !important;
 }
