--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -26,7 +26,7 @@
         <li><p class="p-1">Socials</p></li>
         <li class="footer__social-item">
           <a href="https://dribble.com" class="footer__social-link p-2" target="_blank">
-            <span class="footer__social-text">Dribble</span>
+            <span class="footer__social-text">Dribbble</span>
             <span class="footer__social-icon icon-dribbble"></span>
           </a>
         </li>
