--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -244,6 +244,15 @@
     }
   }
 
+  &__link {
+    color: var(--medium-grey);
+    transition: color var(--animation);
+
+    &:hover {
+      color: var(--main-purple);
+    }
+  }
+
   &__icon {
     font-size: 24px;
     line-height: 24px;
@@ -302,7 +311,7 @@
 .counter {
   position: absolute;
   right: 5px;
-  bottom: 5px;
+  bottom: 7px;
   font-size: 12px;
   color: var(--medium-grey);
   z-index: 2;
@@ -310,7 +319,7 @@
 
 .form__error.comment-error {
   top: auto;
-  bottom: 8px;
+  bottom: 10px;
   right: 1px;
   left: 1px;
   background-color: white;
