--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -53,7 +53,7 @@
         <li><p class="p-1">Contact</p></li>
         <li class="footer__contacts-item">
           <span class="icon-sms icon"></span>
-          <a id="email-address" class="p-2" href="mailto:hello@mfisher.com">hello@mfisher.com</a>
+          <a id="email-address" class="p-2" href="mailto:hello@mfisher.agency">hello@mfisher.agency</a>
           <span class="icon-copy icon_primary-white" id="email-copy" onclick="copyEmail()"></span>
         </li>
         <li class="footer__contacts-item">
