--- a/src/components/request_popup.html
+++ b/src/components/request_popup.html
@@ -15,7 +15,7 @@
             <p class="p-3 contacts__label">Drop us a line</p>
             <div class="contacts__item-content">
               <span class="icon-sms icon"></span>
-              <a id="email-address" class="p-1" href="mailto:hello@mfisher.com">hello@mfisher.com</a>
+              <a id="email-address" class="p-1" href="mailto:hello@mfisher.agency">hello@mfisher.agency</a>
               <span id="email-copy" class="icon icon-copy icon_primary-green" onclick="copyEmail()"></span>
             </div>
           </li>
