--- a/src/styles/pages/portfolio.scss
+++ b/src/styles/pages/portfolio.scss
@@ -139,7 +139,7 @@
   &__item {
     position: relative;
     overflow: hidden;
-    display: none;
+    //display: none;
 
     &:hover:not(:nth-child(3n)) {
       .portfolio__item-name {
