--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -25,7 +25,7 @@
       <ul class="footer__social">
         <li><p class="p-1">Socials</p></li>
         <li class="footer__social-item">
-          <a href="https://dribble.com" class="footer__social-link p-2" target="_blank">
+          <a href="https://dribbble.com" class="footer__social-link p-2" target="_blank">
             <span class="footer__social-text">Dribbble</span>
             <span class="footer__social-icon icon-dribbble"></span>
           </a>
