--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -217,9 +217,18 @@
     font-size: 24px;
     line-height: 24px;
     color: var(--grey);
+    transition: color ease-in-out 0.4s;
 
     @include tablet {
       display: none;
+    }
+  }
+
+  &__social-link {
+    &:hover {
+      .footer__social-icon {
+        color: var(--main-purple);
+      }
     }
   }
 
